todoList sidebar overlap fix(?)

--- a/style.css
+++ b/style.css
@@ -532,6 +532,11 @@ input:focus, textarea:focus {
   overflow-x: hidden;
   padding-top: 20px;
 }
+.todoContainer {
+  margin-left: 200px;
+  display: flex;
+  flex-direction: row;
+}
 
 #toDO {
   margin: 10px;
@@ -750,6 +755,12 @@ input:focus, textarea:focus {
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   border: 4px solid #403234;
   color: black;
+}
+
+/* VIEW ROUTINES */
+.routineSummaryCard{ 
+  width: 500px;
+  margin: 30px;
 }
 
 
